--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="orarend">
         <h1>Órarend</h1>
-        <h2>13c 2018/2019</h2>
+        <h2>13c - 2018/2019</h2>
         <table>
             <thead>
                 <tr>
@@ -21,67 +21,58 @@
                     <th>Péntek</th>
                 </tr>
             </thead>
-            <!--
-            CBK
-            SMA
-            PEL
-            SMH
-            GYÉ
-            NJI
-            -->
             <tbody>
                 <tr>
-                    <td class="ora">1</td>
-                    <!--<td rowspan="3" class="cbk">Programozás gyakorlat</td> -->
-
-                    <td rowspan="3" class="cbk">
-                        <div class="xd">Császiné Busa Krisztina</div>
-                    </td>
-                    <td rowspan="3" class="smh">IT alapok gyakorlat</td>
-                    <td rowspan="4" class="nji">Programozás gyakorlat</td>
-                    <td class="sma">Algoritmizálás</td>
-                    <td class="sma">Algoritmizálás</td>
+                    <td class="ora" title="7:45-8:30">1</td>
+                    <td rowspan="3" class="cbk" hover="Terem: Sze1">Programozás gyakorlat</td>
+                    <td rowspan="3" class="smh" hover="Terem: F11">IT alapok gyakorlat</td>
+                    <td rowspan="4" class="nji" hover="Terem: Sze1">Programozás gyakorlat</td>
+                    <td class="sma" hover="Terem: Szf1">Algoritmizálás</td>
+                    <td class="sma" hover="Terem: Szf1">Algoritmizálás</td>
                 </tr>
                 <tr>
-                    <td class="ora">2</td>
-                    <td class="gye">Hálózatok I.</td>
-                    <td class="cbk">Programozás</td>
+                    <td class="ora" title="8:40-9:25">2</td>
+                    <td class="gye" hover="Terem: F11">Hálózatok I.</td>
+                    <td class="cbk" hover="Terem: Szf6">Programozás</td>
                 </tr>
                 <tr>
-                    <td class="ora">3</td>
-                    <td rowspan="3" class="gye">Hálózatok I. gyakorlat</td>
-                    <td class="smh">IT alapok</td>
+                    <td class="ora" title="10:35-11:20">3</td>
+                    <td rowspan="3" class="gye" hover="Terem: F11">Hálózatok I. gyakorlat</td>
+                    <td class="smh" hover="Terem: Szf1">IT alapok</td>
                 </tr>
                 <tr>
-                    <td class="ora">4</td>
-                    <td class="sma">Algoritmizálás</td>
-                    <td rowspan="2" class="gye">Hálózatok I. gyakorlat</td>
-                    <td rowspan="2" class="pel">IT szakmai angol</td>
+                    <td class="ora" title="10:35-11:20">4</td>
+                    <td class="sma" hover="Terem: Szf1">Algoritmizálás</td>
+                    <td rowspan="2" class="gye" hover="Terem: F11">Hálózatok I. gyakorlat</td>
+                    <td rowspan="2" class="pel" hover="Terem: Szf1">IT szakmai angol</td>
                 </tr>
                 <tr>
-                    <td class="ora">5</td>
-                    <td class="pel">IT szakmai angol</td>
-                    <td class="gye">Hálózatok I.</td>
+                    <td class="ora" title="11:30-12:15">5</td>
+                    <td class="pel" hover="Terem: Szf2">IT szakmai angol</td>
+                    <td class="gye" hover="Terem: F11">Hálózatok I.</td>
                 </tr>
                 <tr>
-                    <td class="ora">6</td>
-                    <td class="smh">IT alapok</td>
-                    <td rowspan="2" class="cbk">Programozás</td>
-                    <td class="gye">Hálózatok I. gyakorlat</td>
-                    <td rowspan="2" class="cbk">Programozás gyakorlat</td>
-                    <td rowspan="2" class="gye">Netes alkalmazások használata</td>
+                    <td class="ora" title="12:25-13:10">6</td>
+                    <td class="smh" hover="Terem: Fs6">IT alapok</td>
+                    <td rowspan="2" class="cbk" hover="Terem: Szf1">Programozás</td>
+                    <td class="gye" hover="Terem: F11">Hálózatok I. gyakorlat</td>
+                    <td rowspan="2" class="cbk" hover="Terem: Sze1">Programozás gyakorlat</td>
+                    <td rowspan="2" class="gye" hover="Terem: F11">Netes alkalmazások használata</td>
                 </tr>
                 <tr>
-                    <td class="ora">7</td>
-                    <td class="cbk">Programozás</td>
-                    <td class="gye">Hálózatok I.</td>
+                    <td class="ora" title="13:15-14:00">7</td>
+                    <td class="cbk" hover="Terem: Szf1">Programozás</td>
+                    <td class="gye" hover="Terem: F11">Hálózatok I.</td>
                 </tr>
             </tbody>
-
         </table>
-
     </div>
-
+    <footer class="footer">
+        <p>
+            Copyright &copy; 2019 <a href="https://github.com/heinrichviktor/orarend" target="_blank">
+                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Logo.png" alt="Source code"></a>
+        </p>
+    </footer>
 </body>
 
 </html>
